// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bold formatting message with asterisks and bold escape code has bold formatting 1`] = `
<div>
  [
  2021-01-01
  ] 
  <span
    className="nick-1"
  >
    BoldMoveCotton
  </span>
  : 
   
  This
   
  is
   
  a
   
  message
   
  with
   
  
  <b>
    *asterisks*
  </b>
  
   
  and
  <b>
     
    escape
  </b>
  <b>
     
    codes
  </b>
</div>
`;

exports[`bold formatting message with asterisks and links has both formatting 1`] = `
<div>
  [
  2021-01-01
  ] 
  <span
    className="nick-1"
  >
    BoldMoveCotton
  </span>
  : 
   
  This
   
  is
   
  a
   
  message
   
  with
   
  asterisk
   
  
  <b>
    *bolded*
  </b>
  
   
  words
   
  and
   
  links:
   
  <a
    href="https://reddit.com"
  >
    https://reddit.com
  </a>
</div>
`;

exports[`bold formatting message with asterisks has bold formatting 1`] = `
<div>
  [
  2021-01-01
  ] 
  <span
    className="nick-1"
  >
    BoldMoveCotton
  </span>
  : 
   
  This
   
  is
   
  a
   
  
  <b>
    *message*
  </b>
  
   
  with
   
  asterisk
   
  
  <b>
    *bolded*
  </b>
  
   
  words,
   
  
  <b>
    *right*
  </b>
  ?
</div>
`;

exports[`bold formatting message with asterisks, bold escape code and links has correct formatting 1`] = `
<div>
  [
  2021-01-01
  ] 
  <span
    className="nick-1"
  >
    BoldMoveCotton
  </span>
  : 
   
  This
   
  is
   
  a
   
  message
   
  with
   
  
  <b>
    *asterisks*
  </b>
  ,
  <b>
     
    escape
  </b>
  <b>
     
    codes
  </b>
  <b>
     
    and
  </b>
  <b>
     
    <a
      href="http://reddit.com"
    >
      http://reddit.com
    </a>
  </b>
</div>
`;

exports[`bold formatting message with bold escape code has bold formatting 1`] = `
<div>
  [
  2021-01-01
  ] 
  <span
    className="nick-1"
  >
    BoldMoveCotton
  </span>
  : 
   
  This
   
  is
   
  a
   
  message
   
  with
  <b>
     
    escape
  </b>
  <b>
     
    codes
  </b>
</div>
`;

exports[`link formatting message that contains an "r" but no links does not trigger link rendering 1`] = `
<div>
  [
  2021-01-01
  ] 
  <span
    className="nick-15"
  >
    Linus
  </span>
  : 
  This is a message without links, but it has an r.
</div>
`;

exports[`link formatting message with URLs has links rendered 1`] = `
<div>
  [
  2021-01-01
  ] 
  <span
    className="nick-8"
  >
    RMS
  </span>
  : 
   
  This
   
  is
   
  a
   
  message
   
  with:
   
  <a
    href="http://reddit.com"
  >
    http://reddit.com
  </a>
  ,
   
  also
   
  <a
    href="https://reddit.com/r/linuxmasterrace"
  >
    https://reddit.com/r/linuxmasterrace
  </a>
</div>
`;

exports[`link formatting message with mixed link types has them rendered 1`] = `
<div>
  [
  2021-01-01
  ] 
  <span
    className="nick-14"
  >
    Gnu
  </span>
  : 
   
  This
   
  is
   
  a
   
  message
   
  with:
   
  <a
    href="https://reddit.com/r/linuxmasterrace"
  >
    r/linuxmasterrace
  </a>
  ,
   
  which
   
  links
   
  to
   
  <a
    href="https://reddit.com/r/linuxmasterrace"
  >
    https://reddit.com/r/linuxmasterrace
  </a>
  .
</div>
`;

exports[`link formatting message with subreddits has them rendered as links 1`] = `
<div>
  [
  2021-01-01
  ] 
  <span
    className="nick-14"
  >
    Gnu
  </span>
  : 
   
  This
   
  is
   
  a
   
  message
   
  with:
   
  <a
    href="https://reddit.com/r/linuxmasterrace"
  >
    r/linuxmasterrace
  </a>
  ,
   
  also
   
  <a
    href="https://reddit.com/r/linux"
  >
    /r/linux
  </a>
</div>
`;

exports[`no formatting message without links does not have special formatting 1`] = `
<div>
  [
  2021-01-01
  ] 
  <span
    className="nick-15"
  >
    Linus
  </span>
  : 
  This is a message without links.
</div>
`;
